--- a/AlpakAR/Base.lproj/Main.storyboard
+++ b/AlpakAR/Base.lproj/Main.storyboard
@@ -29,7 +29,7 @@
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                                 <viewLayoutGuide key="safeArea" id="gfq-P6-Bfg"/>
                                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="28"/>
-                                                <state key="normal" title="Start alpakAR!"/>
+                                                <state key="normal" title="Start alpacAR!"/>
                                                 <connections>
                                                     <action selector="SA:" destination="gA2-AA-99Y" eventType="touchUpInside" id="lwX-YX-EOV"/>
                                                     <segue destination="BV1-FR-VrT" kind="show" id="TR2-qg-F0q"/>
@@ -40,6 +40,17 @@
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                                 <viewLayoutGuide key="safeArea" id="lDv-ue-Hrp"/>
                                             </imageView>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9i4-xT-vso">
+                                                <rect key="frame" x="16" y="894" width="335" height="55"/>
+                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                                <state key="normal" title="Contact us"/>
+                                                <connections>
+                                                    <action selector="cU:" destination="gA2-AA-99Y" eventType="touchUpInside" id="xG0-47-eM8"/>
+                                                    <action selector="sendMail2:" destination="Vtp-nB-C0e" eventType="touchUpInside" id="4SH-Ma-RZt"/>
+                                                    <action selector="sendMail:" destination="gA2-AA-99Y" eventType="touchUpInside" id="3mv-v2-bZ2"/>
+                                                </connections>
+                                            </button>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tNK-fd-mXC">
                                                 <rect key="frame" x="16" y="399" width="343" height="487"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
@@ -58,8 +69,21 @@
                                                             <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                         </attributes>
                                                     </fragment>
+                                                    <fragment content="lpa">
+                                                        <attributes>
+                                                            <font key="NSFont" size="24" name="AvenirNext-DemiBold"/>
+                                                            <font key="NSOriginalFont" size="24" name="AvenirNext-DemiBold"/>
+                                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                        </attributes>
+                                                    </fragment>
+                                                    <fragment content="c">
+                                                        <attributes>
+                                                            <font key="NSFont" size="24" name="AvenirNext-DemiBold"/>
+                                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                        </attributes>
+                                                    </fragment>
                                                     <fragment>
-                                                        <string key="content">lpaka!
+                                                        <string key="content">a!
 </string>
                                                         <attributes>
                                                             <font key="NSFont" size="24" name="AvenirNext-DemiBold"/>
@@ -182,17 +206,6 @@ Tobias Blum</string>
                                                 </attributedString>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9i4-xT-vso">
-                                                <rect key="frame" x="16" y="894" width="335" height="55"/>
-                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
-                                                <state key="normal" title="Contact us"/>
-                                                <connections>
-                                                    <action selector="cU:" destination="gA2-AA-99Y" eventType="touchUpInside" id="xG0-47-eM8"/>
-                                                    <action selector="sendMail2:" destination="Vtp-nB-C0e" eventType="touchUpInside" id="4SH-Ma-RZt"/>
-                                                    <action selector="sendMail:" destination="gA2-AA-99Y" eventType="touchUpInside" id="3mv-v2-bZ2"/>
-                                                </connections>
-                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
